[tool.poetry]
name = "imgtrans"
version = "0.1.0"
description = ""
authors = ["motiongorilla <nize.afonya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
